# dr-llm

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  OPEN_ROUTER_REASONING_NOTES.md  POOL_README.md  README.md  TESTING.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  integration.yml
alembic/: README  env.py
alembic/versions/: 20260407_000001_bootstrap.py
docs/: compatibility-contract.md  consumer-rollout-checklist.md  dspy-rich-trace-extraction.md  final_review_drllm.md  final_review_dspy.md  humaneval-pool-extraction.md  migration-guide.md  milestones.md  neon.md  provider_config_types.md  releasing.md  remaining_plan_steps.md  rich-trace-extraction.md
docs/integrations/: nl_latents.md  unitbench.md
docs/log_artifact_md/: artifact_store.md  goal.md  md_graph_projection.md  streaming_log.md
docs/normalize_data/: GOAL.md  README.md  humaneval-pool-extraction.md  rich-trace-extraction.md
docs/ops/: m2b-hardening-checklist.md
docs/plans/: 2026-02-24-m2b-m3-closeout-design.md  2026-06-26-ui-redesign-design.md
examples/: nl_latents_gateway.py  unitbench_gateway.py
info/: affordable_models_data.csv  affordable_models_data_annotated.csv  annotate_affordable_models.py
info/model_specific/: README.md  qwen3.5-122b-a10b.md  qwen3.5-27b.md  qwen3.5-35b-a3b.md  qwen3.5-397b-a17b.md  qwen3.5-9b.md  qwen3.5-family-plan.md  qwen3.5-flash-02-23.md  qwen3.5-plus-02-15.md
nbs/: hit_providers.py  inspect.py  inspect_code.py  pool_inspect.py  pool_inspect_detailed.py  providers.py
nbs/inspect/: code.py  humaneval_exact_dedupe.py  inspect_code.py  pool_data.py  pool_detailed_summary.py  pool_status.py  projects.py
scripts/: _demo_thinking_models.py  _demo_utils.py  demo-artifact-projection.py  demo-metadata-projection-e2e.py  demo-pool-fill.py  demo-pool-providers.py  demo-project-sync-postgres.py  demo-providers.py  demo-query-flow.sh  demo-streaming-log-pool-import.py  demo-streaming-log-worker.py  demo_thinking_and_effort.py  dspy_rich_trace_extract_common.py  dump_humaneval_candidate_pool_rows.py  explore_humaneval_pool_policy.py  extract_dspy_rich_trace_rows.py  extract_humaneval_code_attempts.py  extract_rich_trace_rows.py  humaneval_pool_extract_common.py  migrate-call-stats.py  rich_trace_extract_common.py  run-integration-local.sh  run-tests-local.sh  run-tests-non-integration.sh  split_dspy_rich_trace_candidate_rows.py  split_dspy_rich_traces_by_dataset_task.py  split_humaneval_attempts_by_task.py  split_rich_trace_candidate_rows.py  split_rich_traces_by_dataset_task.py  start-integration-postgres.sh  start-test-postgres.sh  stop-integration-postgres.sh  stop-test-postgres.sh
src/dr_llm/: __init__.py  __main__.py  benchmark.py  cli.py  client.py  dataframes.py  datetime_utils.py  env.py  errors.py  types.py
src/llm_pool/: __init__.py  __main__.py  benchmark.py  cli.py  client.py  errors.py  types.py
tests/: conftest.py  test_benchmark.py  test_catalog_service.py  test_catalog_store.py  test_cli.py  test_client_recording.py  test_dataframes.py  test_demo_helpers.py  test_env.py  test_generation_logging.py  test_neon_publish.py  test_openai_compat_reasoning.py  test_pool_ddl.py  test_pool_models.py  test_postgres_sync.py  test_project_docker.py  test_project_info.py  test_project_service.py  test_provider_avail.py  test_provider_invalid_json.py  test_provider_payloads.py  test_provider_registry.py  test_provider_utils.py  test_reasoning_mapper.py  test_session_client.py  test_session_parser.py  test_strategy.py  test_tools.py  test_types_models.py  test_ui_api.py  test_worker_retry.py
tests/artifact_projection/: test_identity_policy.py  test_index_store.py  test_projector.py  test_shards_storage.py
tests/backends/: _helpers.py  test_async_bridge.py  test_converters.py  test_direct_backend.py  test_dr_dspy_contract.py  test_fingerprint.py  test_pool_backend.py  test_process_fn.py  test_validation.py
tests/catalog/: test_catalog_service.py  test_file_store.py  test_model_blacklist.py
tests/cli/: test_cli_app.py  test_cli_artifact_projection.py  test_cli_metadata_projection.py  test_cli_models.py  test_cli_pool.py  test_cli_project.py  test_cli_providers.py  test_cli_query.py  test_cli_run.py  test_cli_streaming_log.py
tests/generation_logging/: test_generation_logging.py
tests/integration/: test_artifact_projection.py  test_backends_pool.py  test_live_openrouter.py  test_metadata_projection.py  test_pool_deletion.py  test_pool_fill.py  test_pool_migration.py  test_pool_reader.py  test_pool_store.py  test_postgres_repository.py  test_sampling.py  test_streaming_log.py
tests/llm/: test_coercion.py  test_names.py
tests/metadata_projection/: test_artifact_links.py  test_graph.py  test_identity_mapper.py
tests/pool/: test_call_stats.py  test_claim_strategy.py  test_dataframe_loaders.py  test_db_runtime.py  test_llm_pool_backend.py  test_make_llm_process_fn.py  test_pending_backend.py  test_pool_admin_service.py  test_pool_ddl.py  test_pool_fill.py  test_pool_grid.py  test_pool_models.py  (+9 more)
ui/: README.md
(+726 files in other folders)
