[project]
name = "llm-pool"
version = "0.1.0"
description = "Shared LLM calling and event-sourced storage primitive for benchmark systems."
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.10",
    "psycopg-pool>=3.2.6",
    "pydantic>=2.11.7",
    "tenacity>=9.1.2",
    "typer>=0.17.4",
]

[project.scripts]
llm-pool = "llm_pool.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.2",
    "ty>=0.0.17",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require external systems (e.g., PostgreSQL)",
]

[tool.ruff]
include = ["src/**/*.py", "src/**/*.pyi"]

[tool.ty.environment]
root = ["src"]

[tool.ty.src]
respect-ignore-files = true
include = ["**/*.py"]
exclude = []
