[project]
name = "dr-llm"
version = "2.3.1"
description = "Provider-agnostic single-query LLM client with PostgreSQL recording and catalog storage."
readme = "README.md"
keywords = ["llm", "postgres", "ai", "catalog", "storage"]
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "psycopg[binary]>=3.2.10",
    "psycopg-pool>=3.2.6",
    "pydantic>=2.11.7",
    "tenacity>=9.1.2",
    "typer>=0.17.4",
    "rich>=14.3.3",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "sqlalchemy>=2.0.49",
    "pydantic-settings>=2.13.1",
    "marimo[recommended]>=0.23.2",
    "pandas>=3.0.2",
    "marimo-utils==0.7.0",
]

[project.optional-dependencies]
notebooks = [
    "marimo>=0.23.1",
]

[project.urls]
Homepage = "https://github.com/drothermel/dr-llm"
Repository = "https://github.com/drothermel/dr-llm"
Issues = "https://github.com/drothermel/dr-llm/issues"
Changelog = "https://github.com/drothermel/dr-llm/blob/main/CHANGELOG.md"

[project.scripts]
dr-llm = "dr_llm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dr_llm"]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "mohtml>=0.1.11",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.2",
    "ty>=0.0.17",
]

[tool.pytest.ini_options]
addopts = "-n auto"
markers = [
    "integration: marks tests that require external systems (e.g., PostgreSQL)",
]

[tool.ruff]
include = ["src/**/*.py", "src/**/*.pyi", "tests/**/*.py", "scripts/**/*.py"]

[tool.ty.environment]
root = ["src", "."]
extra-paths = ["scripts"]

[tool.ty.src]
respect-ignore-files = true
include = ["src/**/*.py", "tests/**/*.py", "scripts/**/*.py"]
exclude = ["nbs/**/*.py", "src/dr_llm/ui/"]
